--- a/src/css/style.css
+++ b/src/css/style.css
@@ -843,10 +843,10 @@ hr.white {
 	bottom: 25px;
 }
 .top-slider .slick-dots li {
-	border-color: #fff !important;
+	border-color: rgb(255, 255, 255) !important;
 }
 .top-slider .slick-dots li.slick-active {
-	background-color: #fff !important;
+	background-color: rgb(255, 255, 255) !important;
 }
 .top-slider {
 	overflow: hidden;
