--- a/src/css/jquery.fancybox.css
+++ b/src/css/jquery.fancybox.css
@@ -183,6 +183,7 @@
 	overflow: hidden;
 	display: none;
 	z-index: 8010;
+	background: url('../images/fancybox_overlay.png');
 }
 
 .fancybox-overlay-fixed {
